--- a/.eslintrc
+++ b/.eslintrc
@@ -6,12 +6,19 @@
         "es6": true
     },
     "rules": {
+       "react/jsx-uses-react": 2,
+        "react/jsx-uses-vars": 2,
+        "react/react-in-jsx-scope": 2,
+        "react/prop-types": 0,
+        "react/jsx-first-prop-new-line": 0,
+        "react/jsx-filename-extension": 0,
+        "import/no-unresolved": [2, { "commonjs": true, "caseSensitive": false}],
         "linebreak-style": 0,
         "quotes": [2, "single"],
         "no-else-return": 0,
         "new-cap": ["error", {"capIsNewExceptions": ["Router"]}],
         "no-console": 0,
-        "import/no-unresolved": [2, { "commonjs": true}],
+        # "import/no-unresolved": [2, { "commonjs": true}],
         "no-unused-vars": ["error", { "vars": "all", "args": "none" }],
         "no-underscore-dangle": 0,
         "arrow-body-style": 0,
@@ -25,7 +32,11 @@
         ],
         "no-debugger": "warn"
     },
+      "plugins": [
+        "react"
+    ],
     "ecmaFeatures": {
+        "jsx": true,
         "modules": true
     }
 }
