--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "SET WEBPACK_ENV=production & webpack --colors",
     "clean": "rimraf public/build",
     "deploy": "npm run build & gh-pages -d public & npm run clean",
-     "surge": "npm run build & surge -p public -d watermandrew-starterpack.surge.sh & npm run clean"
+    "surge": "npm run build & surge -p public -d watermandrew-starterpack.surge.sh & npm run clean"
   },
   "repository": {
     "type": "git",
@@ -50,7 +50,10 @@
     "lodash.debounce": "^4.0.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
