--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starterpack-watermandrew",
+  "name": "waterman-dev-challenge",
   "version": "1.0.0",
-  "description": "\"# starterpack-watermandrew\"",
+  "description": "\"# waterman-dev-challenge\"",
   "main": "src/index.js",
   "scripts": {
     "start": "set NODE_ENV=development & webpack-dev-server --inline --hot",
